# hwarang.ai

./: .env.example  .gitignore  Makefile  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
modules/hwarang-api/: .env.example  README.md  pyproject.toml
modules/hwarang-api/alembic/: alembic.ini  env.py
modules/hwarang-api/scripts/: demo_hlkm.py  seed_hlkm.py  seed_trusted_sources.py
modules/hwarang-api/src/hwarang_api/: __init__.py  config.py  main.py
modules/hwarang-api/src/hwarang_api/cognitive/: __init__.py  audit.py  embeddings.py  free_will.py  goal_generator.py  guardrails.py  guardrails_advanced.py  hallucination_check.py  intent.py  inter_agent.py  master_loop.py  memory.py  orchestrator.py  reasoning.py  spontaneous.py
modules/hwarang-api/src/hwarang_api/db/: __init__.py  models.py  session.py
modules/hwarang-api/src/hwarang_api/distributed/: __init__.py  fault_tolerance.py  grpc_worker.py  health_monitor.py  load_balancer.py  model_deploy.py  protocol.py  worker.py
modules/hwarang-api/src/hwarang_api/grid/: __init__.py  matcher.py  round_orchestrator.py  sharder.py  straggler.py
modules/hwarang-api/src/hwarang_api/knowledge/: __init__.py  active_learning.py  adversarial_testing.py  arbitrator.py  audit.py  bias_detection.py  bounty_market.py  causal_extractor.py  claim_decomposition.py  coin.py  coin_emission.py  community.py  consensus.py  contradiction.py  contribution_gate.py  contributor_tier.py  counter_evidence.py  country_hierarchy.py  crawl_dispatcher.py  cross_lingual.py  cross_verifier.py  dispute_dao.py  embeddings.py  entity.py  expert_verification.py  external_retraction.py  falsifiability.py  federated_fact_check.py  gdpr.py  graph.py  half_life.py  hierarchy.py  hrag_bridge.py  hrag_client.py  hypothesis.py  hypothesis_engine.py  llm.py  logic_integrity.py  master_fallback_crawler.py  multimodal.py  (+35 more)
modules/hwarang-api/src/hwarang_api/learning/: __init__.py  adversarial_tester.py  auto_rollback.py  auto_spawn.py  auto_trainer.py  auto_trigger.py  capability_monitor.py  compounding_loop.py  curious_crawler.py  ewc.py  (+16 more)
modules/hwarang-api/tests/: conftest.py  test_chat.py  test_health.py  test_hlkm_integration.py  test_rate_limit.py
modules/hwarang-cli/: .env.example  pyproject.toml
modules/hwarang-cli/src/hwarang_cli/: __init__.py  config.py  main.py  repl.py
modules/hwarang-cli/tests/: conftest.py  test_providers.py  test_tools.py
modules/hwarang-core/: pyproject.toml
modules/hwarang-core/configs/model/: 7b.yaml  large.yaml  medium.yaml  small.yaml
modules/hwarang-core/configs/training/: dpo.yaml  lora.yaml  pretrain.yaml  pretrain_7b.yaml  sft.yaml
modules/hwarang-core/data/sft/: 500_design.jsonl  500_programming.jsonl  advanced_python.jsonl  ai_programming.jsonl  all_langs_deep.jsonl  ambiguity_v4.jsonl  app_design_patterns.jsonl  architecture.jsonl  auth_security.jsonl  bulk_150.jsonl  coding_all.jsonl  database.jsonl  deep_ai.jsonl  deep_db.jsonl  deep_design_v2.jsonl  deep_python.jsonl  deep_react_nextjs.jsonl  design.jsonl  design_code.jsonl  design_patterns.jsonl  design_samples.jsonl  detailed_coding.jsonl  devops.jsonl  dpo_v4.jsonl  flutter_php_ruby.jsonl  foundation.jsonl  frontend_advanced.jsonl  full_projects.jsonl  go_advanced.jsonl  hwarang_all_v2.jsonl  identity_v7.jsonl  java_kotlin.jsonl  korean_reinforcement.jsonl  lang_patterns_boost.jsonl  large_projects.jsonl  mass_design.jsonl  mass_programming.jsonl  mega_chat.jsonl  mega_components.jsonl  mega_dashboard.jsonl  (+18 more)
modules/hwarang-core/scripts/: align.py  analyze_feedback.py  benchmark.py  build_v11_dataset.sh  build_v8_dataset.sh  build_v9_dataset.sh  download_models.sh  eval_full.py  eval_identity.py  eval_tool_calling.py  eval_v8.sh  export_model.py  finetune.py  generate_ppt.py  lora_train.py  merge_lora.py  pretrain.py  qlora_hwarang.py  qlora_qwen.py  train_all_models.sh  train_design_lora.sh  train_tokenizer.py  train_tools_lora.sh
modules/hwarang-core/scripts/advanced/: federated_lora.py  hfl_adaptive.py  hfl_auto_datagen.py  hfl_continuous_learning.py  hfl_distributed_serving.py  hfl_failover.py  hfl_parallel_inference.py  hfl_peer_validation.py  hfl_scheduler.py  hfl_tensor_parallel_network.py  train_constitutional_dpo.py  train_ddp.py  train_grpo.py  train_prm.py  train_vision_design.py
modules/hwarang-core/scripts/blockchain/: adaptive_emission.py
modules/hwarang-core/scripts/data/: build_500_design.py  build_500_programming.py  build_advanced_python.py  build_ai_programming.py  build_all_langs_deep.py  build_ambiguity_v4.py  build_app_design_patterns.py  build_architecture_data.py  build_auth_security.py  build_base_consistency_v8.py  build_bulk_150.py  build_code_switch_block_v8.py  build_coding_data.py  build_cot_v4.py  build_database_data.py  build_deep_ai.py  build_deep_db.py  build_deep_design_v2.py  build_deep_python.py  build_deep_react_nextjs.py  build_design_code.py  build_design_data.py  build_design_patterns.py  build_design_samples.py  build_detailed_coding.py  build_devops_data.py  build_dpo_v4.py  build_flutter_php_ruby.py  build_foundation_data.py  build_frontend_data.py  build_full_projects.py  build_go_advanced.py  build_hp_markup_v8.py  build_identity_v3.py  build_identity_v7.py  build_identity_v8.py  build_java_kotlin.py  build_ko_long_v9.py  build_ko_only_v8.py  build_ko_prose_v11.py  (+46 more)
modules/hwarang-core/scripts/optimization/: curriculum_learning.py  model_merge.py  self_rewarding.py  serve_optimized.sh
modules/hwarang-core/src/hwarang_core/: __init__.py
modules/hwarang-core/tests/: conftest.py  test_data_pipeline.py  test_inference.py  test_model.py  test_tokenizer.py  test_training.py
modules/hwarang-engine/: README.md  pyproject.toml
modules/hwarang-engine/src/hwarang_engine/: __init__.py  server.py
modules/hwarang-engine/tests/: test_skeleton.py
modules/hwarang-grid/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
modules/hwarang-sdk-py/: pyproject.toml
modules/hwarang-sdk-py/src/hwarang/: __init__.py  _client.py  _dsl.py  _errors.py  _markup.py  _types.py
(+647 files in other folders)
