[project]
name = "hwarang"
version = "0.1.0"
description = "Hwarang AI System - LLM Core, API Server, CLI Agent"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["modules/*/tests", "packages/*/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
