[tool.poetry]
name = "hwarang-api"
version = "0.1.0"
description = "Hwarang API Server - OpenAI-compatible REST API"
authors = ["Hwarang Team"]
packages = [{include = "hwarang_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
pydantic-settings = "^2.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
redis = {extras = ["hiredis"], version = "^5.0"}
alembic = "^1.13"
hwarang-shared = {path = "../../packages/hwarang-shared", develop = true}
hwarang-core = {path = "../hwarang-core", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
