[tool.poetry]
name = "hwarang-core"
version = "0.1.0"
description = "Hwarang LLM Core - Model, Training, and Inference"
authors = ["Hwarang Team"]
packages = [{include = "hwarang_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3"
numpy = "^1.26"
pyyaml = "^6.0"
tqdm = "^4.66"
hwarang-shared = {path = "../../packages/hwarang-shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
