[tool.poetry]
name = "hwarang-engine"
version = "0.0.1-alpha"
description = "Hwarang Self-Evolving Engine — Independent inference engine"
authors = ["Hwarang AI"]
packages = [{include = "hwarang_engine", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4"
transformers = "^4.45"
peft = "^0.13"
# Phase 4.1 부터 추가:
# triton = "^3.0"
# tensorrt-llm = "^0.13"
# sentencepiece = "^0.2"
# mecab-python3 = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
