[package]
name = "hwarang-grid"
version = "0.1.0"
description = "Hwarang Grid Agent - GPU 공유 네트워크"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["system-tray", "notification-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
