[package]
name = "hwarang-grid"
version = "0.1.0"
description = "Hwarang Grid Agent - GPU 공유 네트워크"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "system-tray",
  "notification-all",
  "shell-open",
  "shell-execute",
  "updater",
  "process-relaunch",
  "dialog-message",
  "dialog-ask",
] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-deep-link = { git = "https://github.com/FabianLars/tauri-plugin-deep-link", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
open = "5"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[package.metadata.bundle]
name = "Hwarang Grid Agent"
identifier = "ai.hwarang.grid"
category = "Utility"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
